updated testing-setup to 26.1.2